# cyan

./: .gitignore  Cargo.toml  README.md  TODO.md
crates/cyan/: Cargo.toml
crates/cyan/src/: main.rs
crates/cyan/src/extensions/: mod.rs  path.rs
crates/cyan/tests/: test_compiler.rs
crates/cyan/tests/fixtures/invalid_lex/: invalid_identifier_2.c
crates/cyan/tests/fixtures/invalid_parse/: compound_invalid_operator.c  declare_keyword_as_var.c  end_before_expr.c  extra_paren.c  invalid_function_name.c  invalid_specifier.c  invalid_type.c  invalid_variable_name.c  keyword_wrong_case.c  missing_const.c  missing_const_1.c  missing_first_op.c  missing_operand.c  missing_second_op.c  missing_semicolon.1.c  missing_semicolon.c  missing_type.c  misspelled_keyword.c  nested_missing_const.c  no_semicolon.c  not_expression.c  parenthesize_operand.c  return_in_assignment.c  space_in_keyword.c  switched_parens.c  unary_missing_semicolon.c  unclosed_brace.c  unclosed_paren_1.c
crates/cyan/tests/fixtures/invalid_semantics/: invalid_lvalue.c  invalid_lvalue_2.c  redefine.c  (+6 more)
crates/cyan_compiler/: Cargo.toml
crates/cyan_compiler/src/: ast.rs  context.rs  emitter.rs  lib.rs  location.rs  span.rs  symbol.rs  symtable.rs  types.rs  utils.rs
crates/cyan_compiler/src/analysis/: id_resolution.rs  labels_resolution.rs  loop_labeling.rs  mod.rs  switch_resolution.rs  typecheck.rs  var_resolution.rs
crates/cyan_compiler/src/lexer/: ascii.rs  lexer.rs  mod.rs  token.rs
crates/cyan_compiler/src/parser/: parser.rs
crates/cyan_compiler/src/trees/: aast.rs  ast.rs  mod.rs  tac.rs
(+92 files in other folders)
