[package]
name = "cyan"
version = "0.1.0"
description = "Compiler for a subset of C."
authors = ["Vladislav Mamon <vlad@nrsk.dev>"]
edition = "2021"

[dependencies]
cyan_compiler = { path = "../cyan_compiler" }

anyhow = "1.0.94"
thiserror = "2.0.4"

clap.workspace = true

[dev-dependencies]
rayon = "1.7.0"
